--- a/Blood App/app/src/main/AndroidManifest.xml
+++ b/Blood App/app/src/main/AndroidManifest.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dev334.blood">
-
+    package="com.dev334.blood" >
+<uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Blood">
+        android:theme="@style/Theme.Blood"
+        android:usesCleartextTraffic="true">
+        <activity
+            android:name=".UI.HomeActivity"
+            android:exported="false" />
         <activity
             android:name=".UI.SplashScreen"
-            android:screenOrientation="portrait"
-            >
-        </activity>
-
-        <activity android:name=".UI.Login.LoginActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".UI.Login.LoginActivity"
             android:exported="true"
-            android:screenOrientation="portrait">
-
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
     </application>
 
 </manifest>
