--- a/Blood App/app/src/main/AndroidManifest.xml
+++ b/Blood App/app/src/main/AndroidManifest.xml
@@ -8,16 +8,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Blood"
+        android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".UI.HomeActivity"
+            android:name=".ui.HomeActivity"
             android:exported="false" />
         <activity
-            android:name=".UI.SplashScreen"
+            android:name=".ui.SplashScreen"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".UI.Login.LoginActivity"
+            android:name=".ui.login.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait" >
             <intent-filter>
