Home activity created

--- a/Blood App/app/src/main/AndroidManifest.xml
+++ b/Blood App/app/src/main/AndroidManifest.xml
@@ -12,7 +12,13 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".ui.home.HomeActivity"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".ui.SplashScreen"
             android:screenOrientation="portrait" />
@@ -20,11 +26,7 @@
             android:name=".ui.login.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
