--- a/Blood App/app/build.gradle
+++ b/Blood App/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+
 }
