--- a/Blood App/app/build.gradle
+++ b/Blood App/app/build.gradle
@@ -44,5 +44,10 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:5.8.0'
+    implementation 'com.mapbox.maps:android:10.2.0'
+
+
+
 
 }
