--- a/Blood App/app/src/main/AndroidManifest.xml
+++ b/Blood App/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.home.ChangePassword"
+            android:exported="false" />
+        <activity
             android:name=".ui.home.UserFeedback"
             android:exported="false" />
         <activity
