--- a/Blood App/app/build.gradle
+++ b/Blood App/app/build.gradle
@@ -44,5 +44,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
 
 }
