--- a/Blood App/app/src/main/AndroidManifest.xml
+++ b/Blood App/app/src/main/AndroidManifest.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dev334.blood" >
-<uses-permission android:name="android.permission.INTERNET"/>
+    package="com.dev334.blood">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +16,17 @@
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.MapActivity"
+            android:exported="false" />
+
+        <meta-data
+            android:name="com.here.sdk.access_key_id"
+            android:value="LkdKPXd1B3TpugC104Lvtg" />
+        <meta-data
+            android:name="com.here.sdk.access_key_secret"
+            android:value="9PFZdTcQr8Oe98-wZdMv1eD_kNxw93e0g4uWHB4Ez-5taG8BhcEuCT3Cse8JJihrf25f6R_vAFuT4lDnQJsVrA" />
+
+        <activity
             android:name=".ui.home.HomeActivity"
             android:exported="true">
             <intent-filter>
@@ -18,7 +34,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
             android:name=".ui.SplashScreen"
@@ -26,9 +41,7 @@
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true"
-            android:screenOrientation="portrait" >
-
-        </activity>
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
