--- a/Blood App/app/build.gradle
+++ b/Blood App/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     implementation 'com.google.android.gms:play-services-location:19.0.0'
+    implementation 'com.github.gastricspark:scrolldatepicker:0.0.1'
 
 
 
