--- a/Blood App/app/src/main/AndroidManifest.xml
+++ b/Blood App/app/src/main/AndroidManifest.xml
@@ -16,11 +16,14 @@
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.admin.AdminActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.MapActivity"
             android:exported="false" />
-
-        <activity android:name=".ui.bank.BloodBankActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.bank.BloodBankActivity"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="com.here.sdk.access_key_id"
@@ -59,7 +62,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
