--- a/Blood App/app/src/main/AndroidManifest.xml
+++ b/Blood App/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -16,11 +18,14 @@
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".util.app.PdfViewerActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.MapActivity"
             android:exported="false" />
-
-        <activity android:name=".ui.bank.BloodBankActivity"
-            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ui.bank.BloodBankActivity"
+            android:screenOrientation="portrait" />
 
         <meta-data
             android:name="com.here.sdk.access_key_id"
@@ -59,7 +64,6 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
