--- a/Blood App/app/src/main/AndroidManifest.xml
+++ b/Blood App/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:theme="@style/AppTheme.NoActionBar"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ui.home.EditProfileActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.admin.AdminActivityRequest"
             android:exported="false" />
         <activity
